# pydantic-models

./: .env.example  .flake8  .gitignore  LICENSE  README.md  config.py  pyproject.toml
.github/workflows/: ci.yml  linters.yml  tests.yml
__tests__/: test_accreditation_model.py  test_ach_account_model.py  test_credit_card_model.py  test_newsletter_subscription_model.py
app/: helpers.py  models.py
