[tool.poetry]
name = "models"
version = "0.1.0"
description = ""
authors = ["Justin Chiou <chiou.kai@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.9.0"
requests = "^2.26.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
coverage = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
