[tool.poetry]
name = "models"
version = "0.1.0"
description = ""
authors = ["Justin Chiou <chiou.kai@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = {extras = ["email"], version = "^1.9.1"}
requests = "^2.27.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^7.1.0"
pytest-cov = "^3.0.0"
coverage = "^6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
